--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@composiv/liveui-react-native",
+  "name": "@eclipse-muto/liveui-react-native",
   "version": "0.1.1",
   "description": "Includes RemoteComponent used by LiveUI applications.",
   "author": "composiv",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/composiv/liveui-react-native"
+    "url": "https://github.com/eclipse-muto/liveui-react-native"
   },
   "scripts": {
     "test": "jest --verbose"
@@ -25,7 +25,7 @@
     "prop-types": "15.7.2"
   },
   "peerDependencies": {
-    "@composiv/liveui-core": "0.1.0"
+    "@eclipse-muto/liveui-core": "0.1.0"
   },
   "devDependencies": {
     "react": "16.13.1",
@@ -43,7 +43,7 @@
     "@babel/preset-env": "7.9.5",
     "@babel/preset-react": "7.9.4",
     "@babel/register": "^7.9.0",
-    "@composiv/liveui-core": "0.1.0",
+    "@eclipse-muto/liveui-core": "0.1.0",
     "@testing-library/react": "^10.0.2",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.1.0",
